--- a/nodes/gossip/Dockerfile
+++ b/nodes/gossip/Dockerfile
@@ -3,9 +3,10 @@ FROM node:22-alpine
 WORKDIR /app
 
 COPY package.json package-lock.json ./
-RUN npm ci
 
 COPY . .
+
+# RUN npm ci
 
 CMD [ "node", "gossip-peer.js" ]
 
