run with debug, delta updates, mutliple bootstrappers, smaller menu, relay -> bootstrapper

--- a/nodes/Makefile
+++ b/nodes/Makefile
@@ -1,6 +1,8 @@
+.PHONY: build stop
+
 build:
 	docker build -t gossip:dev -f Dockerfile.gossip .
-	docker build -t relay:dev -f Dockerfile.relay .
+	docker build -t bootstrapper:dev -f Dockerfile.bootstrapper .
 
 stop:
 	docker stop -s SIGKILL $$(docker ps -a -q) && docker rm $$(docker ps -a -q)
