--- a/nodes/package.json
+++ b/nodes/package.json
@@ -18,6 +18,8 @@
     "@libp2p/crypto": "^5.0.7",
     "@libp2p/dcutr": "^2.0.12",
     "@libp2p/identify": "^3.0.12",
+    "@libp2p/kad-dht": "^14.1.3",
+    "@libp2p/logger": "^5.1.4",
     "@libp2p/ping": "^2.0.12",
     "@libp2p/pubsub-peer-discovery": "^11.0.0",
     "@libp2p/websockets": "^9.0.13",
