--- a/nodes/Dockerfile.gossip
+++ b/nodes/Dockerfile.gossip
@@ -2,10 +2,13 @@ FROM node:22-alpine
 
 WORKDIR /app
 
+## adding iproute2/iptables allow us to simulate network delay by running
+## tc qdisc add dev eth0 root netem delay 100ms
+RUN apk add --no-cache iproute2 iptables
+
 COPY package.json package-lock.json ./
 
 ## copy deps so we can add debugging
-
 COPY . .
 
 # RUN npm ci
