--- a/nodes/package.json
+++ b/nodes/package.json
@@ -22,7 +22,9 @@
     "@libp2p/logger": "^5.1.4",
     "@libp2p/ping": "^2.0.12",
     "@libp2p/pubsub-peer-discovery": "^11.0.0",
+    "@libp2p/tcp": "^10.0.13",
     "@libp2p/websockets": "^9.0.13",
+    "delay": "^6.0.0",
     "fastify": "^5.1.0",
     "libp2p": "^2.3.1",
     "uint8arrays": "^5.1.0",
