--- a/controller-ui/package.json
+++ b/controller-ui/package.json
@@ -12,11 +12,13 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "reagraph": "^4.21.0",
     "uint8arrays": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-cytoscapejs": "^1.2.5",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
