nodes in ts, added status-server

--- a/nodes/Dockerfile.gossip
+++ b/nodes/Dockerfile.gossip
@@ -1,4 +1,4 @@
-FROM node:22-alpine
+FROM node:23-alpine
 
 WORKDIR /app
 
@@ -12,5 +12,4 @@ COPY package.json package-lock.json ./
 COPY . .
 
 # RUN npm ci
-
-CMD [ "node", "gossip-peer.js" ]
+ENTRYPOINT [ "node", "dist/gossip-peer.cjs" ]
