--- a/nodes/Dockerfile.bootstrapper
+++ b/nodes/Dockerfile.bootstrapper
@@ -1,4 +1,4 @@
-FROM node:22-alpine
+FROM node:23-alpine
 
 WORKDIR /app
 
@@ -12,5 +12,4 @@ COPY . .
 
 # RUN npm ci
 
-CMD [ "node", "bootstrapper.js" ]
-
+ENTRYPOINT [ "node", "dist/bootstrapper.cjs" ]
