--- a/nodes/Makefile
+++ b/nodes/Makefile
@@ -1,6 +1,7 @@
 .PHONY: build stop
 
 build:
+	npm run build
 	docker build -t gossip:dev -f Dockerfile.gossip .
 	docker build -t bootstrapper:dev -f Dockerfile.bootstrapper .
 
