--- a/nodes/package.json
+++ b/nodes/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "relay",
+  "name": "gossipsub-nodes",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build-bootstrap && npm run build-gossip",
+    "build-bootstrap": "esbuild src/bootstrapper.ts --bundle --platform=node --target=node22 --outfile=dist/bootstrapper.cjs",
+    "build-gossip": "esbuild src/gossip-peer.ts --bundle --platform=node --target=node22 --outfile=dist/gossip-peer.cjs"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "dozyio",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^14.1.0",
@@ -24,13 +27,11 @@
     "@libp2p/pubsub-peer-discovery": "^11.0.0",
     "@libp2p/tcp": "^10.0.13",
     "@libp2p/websockets": "^9.0.13",
-    "delay": "^6.0.0",
-    "fastify": "^5.1.0",
     "libp2p": "^2.3.1",
     "uint8arrays": "^5.1.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "vite": "^5.4.11"
+    "esbuild": "^0.24.0"
   }
 }
