--- a/nodes/Dockerfile.bootstrapper
+++ b/nodes/Dockerfile.bootstrapper
@@ -2,6 +2,8 @@ FROM node:23-alpine
 
 WORKDIR /app
 
+## adding iproute2/iptables allow us to simulate network delay by running
+## tc qdisc add dev eth0 root netem delay 100ms
 RUN apk add --no-cache iproute2 iptables
 
 COPY package.json package-lock.json ./
