--- a/controller-ui/package.json
+++ b/controller-ui/package.json
@@ -12,7 +12,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
-    "reagraph": "^4.21.0",
+    "react-icons": "^5.3.0",
     "uint8arrays": "^5.1.0"
   },
   "devDependencies": {
