fix: build as ESM not bundled CJS
Not all modules can be built like this, for example ones that try
to detect their position on disk to load native add-ons so build
as unbundled ESM instead.

--- a/nodes/Dockerfile.bootstrapper
+++ b/nodes/Dockerfile.bootstrapper
@@ -7,11 +7,10 @@ WORKDIR /app
 RUN apk add --no-cache iproute2 iptables
 
 COPY package.json package-lock.json ./
+COPY src ./src
+COPY dist ./dist
 
-## copy deps so we can add debugging
+## install deps so native binaries are in the correct format
+RUN npm ci
 
-COPY . .
-
-# RUN npm ci
-
-ENTRYPOINT [ "node", "dist/bootstrapper.cjs" ]
+ENTRYPOINT [ "node", "dist/bootstrapper.js" ]
