--- a/nodes/Dockerfile.gossip
+++ b/nodes/Dockerfile.gossip
@@ -7,9 +7,10 @@ WORKDIR /app
 RUN apk add --no-cache iproute2 iptables
 
 COPY package.json package-lock.json ./
+COPY src ./src
+COPY dist ./dist
 
-## copy deps so we can add debugging
-COPY . .
+## install deps so native binaries are in the correct format
+RUN npm ci
 
-# RUN npm ci
-ENTRYPOINT [ "node", "dist/gossip-peer.cjs" ]
+ENTRYPOINT [ "node", "dist/gossip-peer.js" ]
