--- a/nodes/package.json
+++ b/nodes/package.json
@@ -4,9 +4,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build-bootstrap && npm run build-gossip",
-    "build-bootstrap": "esbuild src/bootstrapper.ts --bundle --platform=node --target=node22 --outfile=dist/bootstrapper.cjs",
-    "build-gossip": "esbuild src/gossip-peer.ts --bundle --platform=node --target=node22 --outfile=dist/gossip-peer.cjs"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "dozyio",
@@ -32,6 +30,6 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "esbuild": "^0.24.0"
+    "typescript": "^5.7.3"
   }
 }
