--- a/controller-ui/package.json
+++ b/controller-ui/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@multiformats/multiaddr": "^12.4.0",
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
