--- a/controller-ui/package.json
+++ b/controller-ui/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@multiformats/multiaddr": "^12.4.0",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
+    "lodash.isequal": "^4.5.0",
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
