--- a/nodes/Dockerfile.gossip-23
+++ b/nodes/Dockerfile.gossip-23
@@ -1,10 +1,10 @@
-FROM node:23-alpine
+FROM node:23
 
 WORKDIR /app
 
 ## adding iproute2/iptables allow us to simulate network delay by running
 ## tc qdisc add dev eth0 root netem delay 100ms
-RUN apk add --no-cache iproute2 iptables tcpdump
+RUN apt update && apt install -y iproute2 iptables tcpdump
 
 COPY package.json package-lock.json ./
 COPY src ./src
